--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 							<div class="card-deck">
 								<div class="card">
-									<img src="media/img/3D-V2.png" width="300" >
+									<img src="media/img/3DSmaller.png" width="300" >
 									<div class="card-body">
 									<h5 class="card-title">Sea ice formation in 2-D and 3-D</h5>
 									<p class="card-text">Uniform mesh simulation of sea ice (blue) growing from a cold atmosphere into the underlying ocean (yellow). 
