Use updated documentation link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<a class="nav-link" href="https://github.com/jrgparkinson/mushy-layer/blob/master/README.md">Installation guide</a> <!--<span class="sr-only">(current)</span>-->
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="https://jrgparkinson.github.io/mushy-layer/doc/html/">Documentation</a>
+						<a class="nav-link" href="doc/html/index.html">Documentation</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#examples">Examples</a>
@@ -104,7 +104,7 @@
 					<!--<a class="btn btn-lg btn-primary" href="#" role="button">Installation guide</a>-->
 					<a href="https://github.com/jrgparkinson/mushy-layer" class="btn btn-primary my-2">Get the code</a>
 					<a href="https://github.com/jrgparkinson/mushy-layer/blob/master/README.md" class="btn btn-success my-2">Installation guide</a>
-					<a href="https://jrgparkinson.github.io/mushy-layer/doc/html/" class="btn btn-danger my-2">Documentation</a>
+					<a href="doc/html/index.html" class="btn btn-danger my-2">Documentation</a>
 					<a href="#examples" class="btn btn-info my-2">Examples</a>
 					<a href="#contribute" class="btn btn-warning my-2">Contribute</a>
 
