Make acronym stand out a bit better

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
 			font-size: 3.5rem;
 		}
 	}
+
+	.acronym {
+		color:#002147; /* 'oxford' blue*/
+		color:#00356B; /* 'yale' blue */
+		font-weight: bold;
+		text-transform: uppercase;
+
+	}
 </style>
 <!-- Custom styles for this template -->
 <link href="css/carousel.css" rel="stylesheet">
@@ -98,7 +106,7 @@
 			<div class="container">
 
 				<h1 class="jumbotron-heading">S<img src="media/img/softballYellow.svg" alt="O" class="inline-logo">FTBALL</h1>
-				<p class="lead text-muted"><b>SO</b>lidification, <b>F</b>low, and <b>T</b>hermodynamics in <b>B</b>inary <b>ALL</b>oys.<br>
+				<p class="lead text-muted"><span class="acronym">SO</span>lidification, <span class="acronym">F</span>low, and <span class="acronym">T</span>hermodynamics in <span class="acronym">B</span>inary <span class="acronym">ALL</span>oys.<br>
 				A code for simulation convection in mushy layers with Adaptive Mesh Refinement.</p>
 				<p>
 					<!--<a class="btn btn-lg btn-primary" href="#" role="button">Installation guide</a>-->
