Adding extra reference to Wells et. al. (2019)

--- a/index.html
+++ b/index.html
@@ -189,7 +189,12 @@
 									</div>
 										<div class="card-body">
 											<h5 class="card-title">Darcy flow in a Hele-Shaw cell</h5>
-											<p class="card-text">Flow in a narrow Hele-Shaw cell, as often used in experiments, is quasi-2-dimensional and well described by just Darcy's law which is less computationally expensive than the full Darcy-Brinkman equation.</p>
+											<p class="card-text">Flow in a narrow Hele-Shaw cell, as often used in experiments, 
+												is quasi-2-dimensional and well described by just Darcy's law which is less 
+												computationally expensive than the full Darcy-Brinkman equation.
+												<br>
+											<a href="#wells2019">(Wells et. al, 2020)</a>
+										</p>
 
 										</div>
 									</div>
@@ -275,8 +280,13 @@ $ git push</code></pre>
 							  </p>
 							  <br>
 							  <p><b>References</b></p>
-							  <p><a class="anchor" id="parkinson2019"></a> J. Parkinson, D. Martin, A. Wells and R.F. Katz. (2019). Modelling binary alloy solidification with Adaptive Mesh Refinement. 
-							  	J. Comp. Phys. doi:<a href="http://dx.doi.org/10.1016/j.jcpx.2019.100043"  target="_blank">10.1016/j.jcpx.2019.100043.</p>
+							  <p><a class="anchor" id="parkinson2019"></a> J. Parkinson, D. Martin, A. Wells and R.F. Katz. (2020). 
+							  	Modelling binary alloy solidification with Adaptive Mesh Refinement. 
+							  	J. Comp. Phys. <a href="http://dx.doi.org/10.1016/j.jcpx.2019.100043"  target="_blank">10.1016/j.jcpx.2019.100043.</p>
+							  <p><a class="anchor" id="wells2019"></a>A. Wells, J. Hitchen and J. Parkinson. (2019).
+							   Mushy-layer growth and convection, with application to sea ice. 
+							   Phil. Trans. A.
+<a href="http://doi.org/10.1098/rsta.2018.0165"  target="_blank">10.1098/rsta.2018.0165</a></p>
 							 </div>
 
 						</footer>	
