Add link to unit test coverage

--- a/index.html
+++ b/index.html
@@ -287,6 +287,12 @@ $ git push</code></pre>
 							   Mushy-layer growth and convection, with application to sea ice. 
 							   Phil. Trans. A.
 <a href="http://doi.org/10.1098/rsta.2018.0165"  target="_blank">10.1098/rsta.2018.0165</a></p>
+								<br>
+ 								<p><b>Code status</b></p>
+ 								<p>Unit test coverage by branch: 
+ 									<a href="https://jrgparkinson.github.io/mushy-layer/test/unit/coverage/development/" target="_blank">development</a>
+ 								| <a href="https://jrgparkinson.github.io/mushy-layer/test/unit/coverage/master/" target="_blank">master</a>.
+ 							</p>
 							 </div>
 
 						</footer>	
